--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,7 @@
 <footer class="center">
   <div class="measure">
     <small>
-      Theme crafted with &lt;3 by <a href="https://johno.com/">John Otander</a> (<a href="https://twitter.com/4lpine">@4lpine</a>).<br>
-      &lt;/&gt; available on <a href="https://github.com/johno/pixyll">GitHub</a>.
+      Rolland Auda, La Condamine, Quito, 2024-2025 / Site statique Jekyll + thème Pyxill</a>.
     </small>
   </div>
 </footer>
